--- a/service/dashboard/package.json
+++ b/service/dashboard/package.json
@@ -9,9 +9,11 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.17",
+    "@fortawesome/free-brands-svg-icons": "^5.9.0",
     "@fortawesome/free-regular-svg-icons": "^5.8.1",
     "@fortawesome/free-solid-svg-icons": "^5.8.1",
     "@fortawesome/vue-fontawesome": "^0.1.6",
+    "axios": "^0.19.0",
     "copy-to-clipboard": "^3.1.0",
     "echarts": "4.1.0",
     "element-ui": "^2.4.11",
@@ -36,7 +38,7 @@
   },
   "vue": {
     "devServer": {
-      "proxy": "http://35.231.146.169:4567"
+      "proxy": "http://127.0.0.1:4567"
     },
     "lintOnSave": true
   }
