--- a/common/configuration/scenario/road_network/queries_read.yml
+++ b/common/configuration/scenario/road_network/queries_read.yml
@@ -1,9 +1,16 @@
 queries:
-  # expect to see this scale linearly with scale
   - "match $x isa road; get;"
-  # expect to see scale in out degree of name (increasing increments) and number of names (fixed increments)
-  - "match $x has name $n; get;"
-  # expect to see scale in role player (upper bounded) * number of relationships (fixed increments)
-  - "match $r (endpoint: $endpoint); get $endpoint;"
-  # aggregate counting attributes has been reported to be slow
+  - "match $x isa intersection; get;"
   - "match $x isa name; get $x; count;"
+  - "match $x has name $n; get;"
+  - "match $r (endpoint: $endpoint); get $r, $endpoint;"
+  - "match $x isa thing; get; offset 1000; limit 100;"
+  - "match $x
+      has name $n,
+      has long-1 $l1,
+      has long-2 $l2,
+      has long-3 $l3,
+      has long-4 $l4,
+      has long-5 $l5,
+      has long-6 $l6;
+      has long-7 $l7; get;"
