--- a/common/configuration/scenario/road_network/queries_read.yml
+++ b/common/configuration/scenario/road_network/queries_read.yml
@@ -1,16 +1,20 @@
 queries:
   - "match $x isa road; get;"
   - "match $x isa intersection; get;"
+  # retrieve attributes and count
   - "match $x isa name; get $x; count;"
+  # retriving one-hop attribute ownership
   - "match $x has name $n; get;"
+  # retrieving role players
   - "match $r (endpoint: $endpoint); get $r, $endpoint;"
+  # using offset and limit
   - "match $x isa thing; get; offset 1000; limit 100;"
+  # query with ambiguity about where to start
   - "match $x
       has name $n,
-      has long-1 $l1,
-      has long-2 $l2,
-      has long-3 $l3,
       has long-4 $l4,
       has long-5 $l5,
-      has long-6 $l6;
+      has long-6 $l6,
       has long-7 $l7; get;"
+  # test how fast grouping is
+  - "match $x has attribute $y; get; limit 1000; group $x;"
