--- a/service/web-server/package.json
+++ b/service/web-server/package.json
@@ -3,23 +3,37 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-        "start": "node src/server.js",
+        "prebuild": "tslint -c tslint.js -p tsconfig.json --fix",
+        "build": "node_modules/typescript/bin/tsc -p tsconfig.json",
+        "prestart": "yarn build",
+        "start": "node dist/src/server.js",
         "test": "node node_modules/jest/bin/jest.js"
     },
     "dependencies": {
+        "@elastic/elasticsearch": "6",
         "@octokit/rest": "^16.28.2",
+        "@types/elasticsearch": "^5.0.34",
+        "@types/node": "^12.6.3",
         "body-parser": "^1.18.3",
         "connect-history-api-fallback": "^1.6.0",
         "cookie-session": "^1.3.3",
         "dotenv": "^8.0.0",
-        "elasticsearch": "^15.3.0",
         "express": "^4.16.4",
         "express-graphql": "^0.7.1",
+        "global": "^4.4.0",
         "graphql": "^14.1.1",
-        "graphql-tools": "^4.0.4"
+        "graphql-tools": "^4.0.4",
+        "restify": "^8.3.3"
     },
     "devDependencies": {
+        "@types/graphql": "^14.2.2",
+        "eslint": "5.3.0",
+        "eslint-config-airbnb-base": "13.2.0",
+        "eslint-plugin-import": "^2.17.2",
         "jest": "^23.6.0",
-        "supertest": "^3.4.1"
+        "supertest": "^3.4.1",
+        "tslint": "^5.18.0",
+        "tslint-config-airbnb": "^5.11.1",
+        "typescript": "^3.5.3"
     }
 }
