--- a/service/web-server/package.json
+++ b/service/web-server/package.json
@@ -3,18 +3,21 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
+        "bash": "copyfiles src/**/*.sh dist/",
         "prebuild": "tslint -c tslint.js -p tsconfig.json --fix",
-        "build": "node_modules/typescript/bin/tsc -p tsconfig.json",
+        "build": "node_modules/typescript/bin/tsc -p tsconfig.json && yarn bash",
         "prestart": "yarn build",
         "start": "node dist/src/server.js",
         "test": "node node_modules/jest/bin/jest.js"
     },
     "dependencies": {
         "@elastic/elasticsearch": "6",
+        "@google-cloud/compute": "^1.1.1",
         "@octokit/rest": "^16.28.2",
         "@types/elasticsearch": "^5.0.34",
         "@types/node": "^12.6.3",
         "body-parser": "^1.18.3",
+        "child-process-promise": "^2.2.1",
         "connect-history-api-fallback": "^1.6.0",
         "cookie-session": "^1.3.3",
         "dotenv": "^8.0.0",
@@ -27,6 +30,7 @@
     },
     "devDependencies": {
         "@types/graphql": "^14.2.2",
+        "copyfiles": "^2.1.1",
         "eslint": "5.3.0",
         "eslint-config-airbnb-base": "13.2.0",
         "eslint-plugin-import": "^2.17.2",
