--- a/service/web-server/tsconfig.json
+++ b/service/web-server/tsconfig.json
@@ -18,6 +18,6 @@
         "noUnusedLocals": true,
         "typeRoots": ["./node_modules/@types", "./src/types.ts"]
     },
-    "include": [ "src/**/*" ],
+    // "include": [ "src/**/*" ],
     "exclude": [ "node_modules"]
 }
