--- a/service/web-server/package.json
+++ b/service/web-server/package.json
@@ -23,17 +23,12 @@
         "dotenv": "^8.0.0",
         "express": "^4.16.4",
         "express-graphql": "^0.7.1",
-        "global": "^4.4.0",
         "graphql": "^14.1.1",
-        "graphql-tools": "^4.0.4",
-        "restify": "^8.3.3"
+        "graphql-tools": "^4.0.4"
     },
     "devDependencies": {
         "@types/graphql": "^14.2.2",
         "copyfiles": "^2.1.1",
-        "eslint": "5.3.0",
-        "eslint-config-airbnb-base": "13.2.0",
-        "eslint-plugin-import": "^2.17.2",
         "jest": "^23.6.0",
         "supertest": "^3.4.1",
         "tslint": "^5.18.0",
