--- a/service/web-server/tsconfig.json
+++ b/service/web-server/tsconfig.json
@@ -11,12 +11,11 @@
         "rootDir": ".",
         "forceConsistentCasingInFileNames": true,
         "noImplicitReturns": true,
-        "noImplicitThis": true,
         // "noImplicitAny": true,
         "strictNullChecks": true,
         "suppressImplicitAnyIndexErrors": true,
         "noUnusedLocals": true,
-        "typeRoots": ["./node_modules/@types", "./src/types.ts"]
+        "typeRoots": ["./node_modules/@types", "./src/types.ts"],
     },
     // "include": [ "src/**/*" ],
     "exclude": [ "node_modules", "src/test", "test"],
