Finish specifying entry point

--- a/querygen/src/BUILD
+++ b/querygen/src/BUILD
@@ -27,11 +27,27 @@ java_library(
 
         # together these can be used to create clients with tracing enabled
         "//dependencies/maven/artifacts/org/slf4j:slf4j-api",
-#        "//dependencies/maven/artifacts/commons-cli",
+        "//dependencies/maven/artifacts/commons-cli",
     ],
     runtime_deps = [
         "//dependencies/maven/artifacts/io/grpc:grpc-netty-shaded",
         "//dependencies/maven/artifacts/ch/qos/logback:logback-classic",
     ],
+    visibility = ["//visibility:public"]
+)
+
+java_binary(
+    name = "query-sampler-binary",
+    main_class = "grakn.benchmark.querygen.QuerySampler",
+    runtime_deps = [
+        ":query-generator"
+    ],
+    classpath_resources = [":logback"],
+    visibility = ["//visibility:public"]
+)
+
+filegroup(
+    name = "logback",
+    srcs = ["//querygen/src:logback.xml"],
     visibility = ["//visibility:public"]
 )
