--- a/querygen/test-integration/BUILD
+++ b/querygen/test-integration/BUILD
@@ -21,7 +21,7 @@ java_test(
      test_class = "grakn.benchmark.querygen.QueryGeneratorIT",
      srcs = ["QueryGeneratorIT.java"],
      deps = [
-         "//querygen/src:query-sampler",
+         "//querygen/src:query-sampler-lib",
          "@graknlabs_client_java//:client-java",
          "@graknlabs_grakn_core//concept:concept",
          "@graknlabs_graql//java:graql",
@@ -44,7 +44,7 @@ java_test(
     test_class = "grakn.benchmark.querygen.SchemaWalkerIT",
     srcs = ["SchemaWalkerIT.java"],
     deps = [
-        "//querygen/src:query-sampler",
+        "//querygen/src:query-sampler-lib",
         "@graknlabs_client_java//:client-java",
         "@graknlabs_grakn_core//concept:concept",
         "@graknlabs_graql//java:graql",
@@ -65,7 +65,7 @@ java_test(
     test_class = "grakn.benchmark.querygen.QuerySamplerIT",
     srcs = ["QuerySamplerIT.java"],
     deps = [
-        "//querygen/src:query-sampler",
+        "//querygen/src:query-sampler-lib",
         "@graknlabs_client_java//:client-java",
         "@graknlabs_grakn_core//concept:concept",
         "@graknlabs_graql//java:graql",
