WIP updating for client

--- a/common/analysis/BUILD
+++ b/common/analysis/BUILD
@@ -4,6 +4,7 @@ java_library(
         "InsertQueryAnalyser.java"
     ],
     deps = [
+        "@graknlabs_client_java//:client-java",
         "@graknlabs_grakn_core//concept:concept",
         "@graknlabs_graql//java:graql",
     ],
