--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,8 +56,8 @@ jobs:
       - run-bazel-rbe:
           command: bazel test //common/configuration/test:configuration-test --test_output=errors
       # run integration tests that do not depend on external grakn
-#      - run-bazel-rbe:
-#          command: bazel test //querygen/test-integration:query-generator-it --test_output=errors
+      - run-bazel-rbe:
+          command: bazel test //querygen/test-integration:query-generator-it --test_output=errors
       - run-bazel-rbe:
           command: bazel test //querygen/test-integration:query-sampler-it --test_output=errors
       - run-bazel-rbe:
