--- a/dependencies/maven/dependencies.yaml
+++ b/dependencies/maven/dependencies.yaml
@@ -141,6 +141,9 @@ dependencies:
     grpc-netty-shaded:
      version: "1.24.0"
      lang: java
+    grpc-api:
+      version: "1.24.0"
+      lang: java
 
 
   com.google.protobuf:
